# pwturbo

./: .gitignore  README.md  config.yaml  demo.py  pyproject.toml
examples/: basic_usage.py  mode_switching.py  multi_threading.py  page_object.py  with_plugins.py
framework/: __init__.py
framework/auth/: __init__.py  okta.py
framework/core/: base_page.py  driver.py  page.py
framework/plugins/: __init__.py  base.py  database.py  screenshot.py
framework/utils/: config.py  logger.py  wait.py
pwturbo/: __init__.py
pwturbo/auth/: __init__.py  okta.py
pwturbo/core/: base_page.py  browser.py  downloader.py  driver.py  page.py
pwturbo/elements/: __init__.py  element.py
pwturbo/plugins/: database.py  screenshot.py
scripts/: setup.bat  setup.sh
test_site/accounts/: views.py
test_site/api/: urls.py  views.py
test_site/okta_mock/: __init__.py  apps.py  urls.py  views.py
test_site/templates/accounts/: dashboard.html  login.html
test_site/templates/okta_mock/: login.html
test_site/test_site/: settings.py  urls.py  wsgi.py
tests/: test_download.py  test_download_okta.py  test_framework.py  test_full.py  test_headful.py
